[package]
name = "radio"
version = "0.1.6"
authors = ["Luis David Licea Torres <luisliceatorres@gmail.com>"]
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Provides egui, epi, web, and native backends.
eframe = "0.15.0"
# Provides serialization and deserialization.
serde = { version = "1", features = ["derive"], optional = true }

# Provides audio playback when compiling for webassembly.
web-sys = { version = "0.3.55", features = [
  "HtmlAudioElement",
  "HtmlMediaElement",
] }

[features]
default = []
# Provides persistence of app state on shutdown.
persistence = ["eframe/persistence", "serde"]

[profile.release]
# Provides a fast and small wasm.
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
